backface visibility to stop animation shake

--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -60,6 +60,8 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+  /* stops slight shake on animation */
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -84,6 +86,8 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 15px;
+  /* shorthand version */
+  animation: moveInRight 1s ease-out;
 }
 
 @keyframes moveInLeft {
@@ -94,6 +98,22 @@ body {
 
   80% {
     transform: translateX(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translateX(-10px);
   }
 
   100% {
